[tool.poetry]
name = "pjrpc"
version = "1.4.1"
description = "Extensible JSON-RPC library"
authors = ["Dmitry Pershin <dapper1291@gmail.com>"]
license = "Unlicense"
readme = "README.rst"
homepage = "https://github.com/dapper91/pjrpc"
repository = "https://github.com/dapper91/pjrpc"
documentation = "https://pjrpc.readthedocs.io/en/latest/"
keywords = [
    'json-rpc', 'rpc', 'jsonrpc-client', 'jsonrpc-server',
    'requests', 'aiohttp', 'flask', 'httpx', 'aio-pika', 'kombu',
    'openapi', 'openrpc', 'starlette', 'django',
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: Public Domain",
    "Framework :: AsyncIO",
    "Framework :: Django",
    "Framework :: Flask",
    "Framework :: Pytest",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]


[tool.poetry.dependencies]
python = "^3.7"
aio-pika = { version = "^6.8", optional = true }
aiofiles = { version = "^0.7", optional = true }
aiohttp = { version = "^3.7", optional = true }
django = { version = "^3.0", optional = true }
docstring-parser = { version = "^0.8", optional = true }
flask = { version = ">=1.1.3", optional = true }
httpx = { version = "^0.17", optional = true }
jsonschema = { version = "^3.0", optional = true }
kombu = { version = "^5.1", optional = true }
markupsafe = { version = "==2.0.1", optional = true }
openapi-ui-bundles = { version = "^0.1", optional = true }
pydantic = { version = "^1.7.0", optional = true }
requests = { version = "^2.0", optional = true }
starlette = { version = "^0.12.0", optional = true }
werkzeug = { version = "~=2.0", optional = true}

[tool.poetry.extras]
aio-pika = ['aio-pika']
aiohttp = ['aiohttp']
django = ['django']
docstring-parser = ['docstring-parser']
flask = ['flask', 'markupsafe']
httpx = ['requests']
jsonschema = ['jsonschema']
kombu = ['kombu']
openapi-ui-bundles = ['openapi-ui-bundles']
pydantic = ['pydantic']
requests = ['requests']
starlette = ['starlette', 'aiofiles']
werkzeug = ['werkzeug']

[tool.poetry.dev-dependencies]
aioresponses = "^0.7"
asynctest = "^0.12"
codecov = "^2.0"
pytest = "^6.0"
pytest-aiohttp = "^0.3"
pytest-cov = "^2.0"
pytest-mock = "^1.0"
responses = "^0.14"
respx = "^0.16"
pre-commit = "^2.19"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
